src/partials/_films.scss
.films_container,
.film_single {
  display: flex;
  flex-wrap: wrap;
}

.film_single {
  color: #00001a;
  width: 250px;
  margin: 1rem;
  position: relative;

  img {
    width: 100%;
    height: 200px;
    object-fit: cover;
  }
}

.movie_data {
  padding: 0 2rem;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  height: 100%;
  @include flexCenter();
  flex-direction: column;
  text-align: center;
  transition: 0.5s ease;

  &:hover {
    background-color: rgb(255, 255, 255, 0.7);
    opacity: 1;
  }
  // mobile phones
  background-color: rgb(255, 255, 255, 0.3);
  opacity: 1;
}

.films_filter {
  @include flexCenter();
  flex-direction: column;
  margin: 0 auto;
  text-align: center;
}

.filter_year {
  @include flexCenter();
  flex-direction: column;
  li {
    margin: 1rem;
    cursor: pointer;
    .active {
      &:active,
      &:focus-within {
        background-color: darkred;
        padding: 0.5rem 1rem;
        border-radius: 20px;
      }
    }
  }
}

